--- a/package.json
+++ b/package.json
@@ -6,14 +6,32 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.4.x"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/StefanSinapov/Newsfeed.git"
   },
-  "author": "SS, GS",
+  "author": "StefanSinapov, hAWKdv",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/StefanSinapov/Newsfeed/issues"
   },
-  "homepage": "https://github.com/StefanSinapov/Newsfeed"
+  "homepage": "https://github.com/StefanSinapov/Newsfeed",
+  "dependencies": {
+    "body-parser": "^1.11.0",
+    "cookie-parser": "^1.3.3",
+    "express": "^4.11.1",
+    "express-session": "^1.10.2",
+    "jade": "^1.9.2",
+    "mongoose": "^3.8.22",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
+    "stylus": "^0.50.0"
+  },
+  "devDependencies": {
+    "bower": "^1.3.12"
+  }
 }
