--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "angular-route": "~1.3.12",
     "bootstrap": "~3.3.2",
     "socket.io-client": "~1.3.3",
-    "toastr": "~2.1.0"
+    "toastr": "~2.1.0",
+    "fontawesome": "~4.3.0"
   }
 }
