--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie-parser": "^1.3.3",
     "express": "^4.11.1",
     "express-session": "^1.10.2",
+    "formidable": "^1.0.17",
     "jade": "^1.9.2",
     "mongoose": "^3.8.22",
     "passport": "^0.2.1",
