--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "express-session": "^1.10.2",
     "formidable": "^1.0.17",
     "jade": "^1.9.2",
+    "jsonwebtoken": "^3.2.2",
     "mongoose": "^3.8.22",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
+    "socket.io": "^1.3.3",
+    "socketio-jwt": "^2.3.5",
     "stylus": "^0.50.0"
   },
   "devDependencies": {
