prep for heroku

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "MEAN stack web chat",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "bower install"
   },
   "engines": {
     "node": "0.10.x",
