--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "postinstall": "bower install"
   },
   "engines": {
-    "node": "0.10.x",
-    "npm": "1.4.x"
+    "node": "0.12.x",
+    "npm": "2.5.x"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/StefanSinapov/Newsfeed",
   "dependencies": {
     "body-parser": "^1.11.0",
+    "bower": "^1.3.12",
     "cookie-parser": "^1.3.3",
     "express": "^4.11.1",
     "express-session": "^1.10.2",
@@ -37,7 +38,5 @@
     "socketio-jwt": "^2.3.5",
     "stylus": "^0.50.0"
   },
-  "devDependencies": {
-    "bower": "^1.3.12"
-  }
+  "devDependencies": {}
 }
